[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name (what pip installs). Hyphen is fine here.
name = "mb-tools"
version = "0.3.0.dev0"
description = "Private utility package for MB_* tooling"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Dan Lamey" }]
dependencies = [
    "cryptography",
]

[project.optional-dependencies]
qt = [
    "PySide6",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# Include non-.py files inside the package (packaged defaults)
[tool.setuptools.package-data]
mb_tools = ["defaults.env"]
